--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,5 @@
-$text-colot: #333;
+$text-colot: #eee;
+$link-color: #efefef;
 $background-color: black;
 
 body {
@@ -11,6 +12,15 @@ body {
   background-color: lighten($background-color, 10%);
 }
 
-a.current {
-  border-bottom: 2px solid teal;
+#main-nav {
+  a {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    padding-left: 0;
+    padding-right: 0;
+    border-bottom: 2px solid transparent;
+  }
+  a.current {
+    border-bottom: 2px solid teal;
+  }
 }
