Adds CountdownForm component and tests

--- a/app/styles/_clock.scss
+++ b/app/styles/_clock.scss
@@ -1,5 +1,5 @@
 #clock {
-  margin: 20% auto;
+  margin: 20% auto 10%;
   width: $clock-size;
   height: $clock-size;
   border-radius: $clock-size;
