--- a/app/styles/_clock.scss
+++ b/app/styles/_clock.scss
@@ -1,5 +1,5 @@
 #clock {
-  margin: 20% auto 10%;
+  margin: 4rem auto;
   width: $clock-size;
   height: $clock-size;
   border-radius: $clock-size;
@@ -13,4 +13,5 @@
   width: 90%;
   text-align: center;
   font-size: 3rem;
+  color: $clock-text-color;
 }
