--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -4,5 +4,6 @@ $background-color: black;
 
 $clock-size: 200px;
 $clock-border-thickness: 2px;
-$clock-border-color: white;
+$clock-border-color: teal;
 $clock-background-color: #444;
+$clock-text-color: white;
